<resources>
    <string name="app_name">Sample</string>
    <string name="name">Name</string>
    <string name="finddevice">finddevice</string>
    <string name="on_off">ON/OFF</string>
    <string name="discovery">Discovery</string>
    <string name="start_connection">Start Connection</string>
    <string name="send_message">Send message</string>
    <string name="send">Send</string>
</resources>
